wip: entry event extended example

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
@@ -26,7 +26,7 @@ With the events you can hook into a number of different Model related operations
 
 ```typescript extensions/cms/entry/eventHandler/create/beforeCreate.ts
 import { EntryBeforeCreateEventHandler as EntryBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeCreateEventHandlerImpl
     implements EntryBeforeCreateEventHandlerAbstraction.Interface
@@ -58,7 +58,7 @@ export default EntryBeforeCreateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/create/afterCreate.ts
 import { EntryAfterCreateEventHandler as EntryAfterCreateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterCreateEventHandlerImpl
     implements EntryAfterCreateEventHandlerAbstraction.Interface
@@ -89,7 +89,7 @@ export default EntryAfterCreateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/createFrom/beforeCreateFrom.ts
 import { EntryRevisionBeforeCreateEventHandler as EntryRevisionBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryRevisionBeforeCreateEventHandlerImpl
     implements EntryRevisionBeforeCreateEventHandlerAbstraction.Interface
@@ -120,7 +120,7 @@ export default EntryRevisionBeforeCreateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/createFrom/afterCreateFrom.ts
 import { EntryRevisionAfterCreateEventHandler as EntryRevisionAfterCreateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryRevisionAfterCreateEventHandlerImpl
     implements EntryRevisionAfterCreateEventHandlerAbstraction.Interface
@@ -153,7 +153,7 @@ export default EntryRevisionAfterCreateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/update/beforeUpdate.ts
 import { EntryBeforeUpdateEventHandler as EntryBeforeUpdateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeUpdateEventHandlerImpl
     implements EntryBeforeUpdateEventHandlerAbstraction.Interface
@@ -184,7 +184,7 @@ export default EntryBeforeUpdateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/update/afterUpdate.ts
 import { EntryAfterUpdateEventHandler as EntryAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterUpdateEventHandlerImpl
     implements EntryAfterUpdateEventHandlerAbstraction.Interface
@@ -217,7 +217,7 @@ export default EntryAfterUpdateEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/delete/beforeDelete.ts
 import { EntryBeforeDeleteEventHandler as EntryBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeDeleteEventHandlerImpl
     implements EntryBeforeDeleteEventHandlerAbstraction.Interface
@@ -248,7 +248,7 @@ export default EntryBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/delete/afterDelete.ts
 import { EntryAfterDeleteEventHandler as EntryAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterDeleteEventHandlerImpl
     implements EntryAfterDeleteEventHandlerAbstraction.Interface
@@ -281,7 +281,7 @@ export default EntryAfterDeleteEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/deleteMultiple/beforeDeleteMultiple.ts
 import { EntryBeforeDeleteMultipleEventHandler as EntryBeforeDeleteMultipleEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeDeleteMultipleEventHandlerImpl
     implements EntryBeforeDeleteMultipleEventHandlerAbstraction.Interface
@@ -312,7 +312,7 @@ export default EntryBeforeDeleteMultipleEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/deleteMultiple/afterDeleteMultiple.ts
 import { EntryAfterDeleteMultipleEventHandler as EntryAfterDeleteMultipleEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterDeleteMultipleEventHandlerImpl
     implements EntryAfterDeleteMultipleEventHandlerAbstraction.Interface
@@ -345,7 +345,7 @@ export default EntryAfterDeleteMultipleEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/deleteRevision/beforeDeleteRevision.ts
 import { EntryRevisionBeforeDeleteEventHandler as EntryRevisionBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryRevisionBeforeDeleteEventHandlerImpl
     implements EntryRevisionBeforeDeleteEventHandlerAbstraction.Interface
@@ -376,7 +376,7 @@ export default EntryRevisionBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/deleteRevision/afterDeleteRevision.ts
 import { EntryRevisionAfterDeleteEventHandler as EntryRevisionAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryRevisionAfterDeleteEventHandlerImpl
     implements EntryRevisionAfterDeleteEventHandlerAbstraction.Interface
@@ -409,7 +409,7 @@ export default EntryRevisionAfterDeleteEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/move/beforeMove.ts
 import { EntryBeforeMoveEventHandler as EntryBeforeMoveEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeMoveEventHandlerImpl
     implements EntryBeforeMoveEventHandlerAbstraction.Interface
@@ -440,7 +440,7 @@ export default EntryBeforeMoveEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/move/afterMove.ts
 import { EntryAfterMoveEventHandler as EntryAfterMoveEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterMoveEventHandlerImpl
     implements EntryAfterMoveEventHandlerAbstraction.Interface
@@ -473,7 +473,7 @@ export default EntryAfterMoveEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/publish/beforePublish.ts
 import { EntryBeforePublishEventHandler as EntryBeforePublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforePublishEventHandlerImpl
     implements EntryBeforePublishEventHandlerAbstraction.Interface
@@ -504,7 +504,7 @@ export default EntryBeforePublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/publish/afterPublish.ts
 import { EntryAfterPublishEventHandler as EntryAfterPublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterPublishEventHandlerImpl
     implements EntryAfterPublishEventHandlerAbstraction.Interface
@@ -537,7 +537,7 @@ export default EntryAfterPublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/republish/beforeRepublish.ts
 import { EntryBeforeRepublishEventHandler as EntryBeforeRepublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeRepublishEventHandlerImpl
     implements EntryBeforeRepublishEventHandlerAbstraction.Interface
@@ -568,7 +568,7 @@ export default EntryBeforeRepublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/republish/afterRepublish.ts
 import { EntryAfterRepublishEventHandler as EntryAfterRepublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterRepublishEventHandlerImpl
     implements EntryAfterRepublishEventHandlerAbstraction.Interface
@@ -601,7 +601,7 @@ export default EntryAfterRepublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/unpublish/beforeUnpublish.ts
 import { EntryBeforeUnpublishEventHandler as EntryBeforeUnpublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeUnpublishEventHandlerImpl
     implements EntryBeforeUnpublishEventHandlerAbstraction.Interface
@@ -632,7 +632,7 @@ export default EntryBeforeUnpublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/unpublish/afterUnpublish.ts
 import { EntryAfterUnpublishEventHandler as EntryAfterUnpublishEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterUnpublishEventHandlerImpl
     implements EntryAfterUnpublishEventHandlerAbstraction.Interface
@@ -665,7 +665,7 @@ export default EntryAfterUnpublishEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/restoreFromBin/beforeRestoreFromBin.ts
 import { EntryBeforeRestoreFromBinEventHandler as EntryBeforeRestoreFromBinEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryBeforeRestoreFromBinEventHandlerImpl
     implements EntryBeforeRestoreFromBinEventHandlerAbstraction.Interface
@@ -696,7 +696,7 @@ export default EntryBeforeRestoreFromBinEventHandler;
 
 ```typescript extensions/cms/entry/eventHandler/restoreFromBin/afterRestoreFromBin.ts
 import { EntryAfterRestoreFromBinEventHandler as EntryAfterRestoreFromBinEventHandlerAbstraction } from "webiny/api/cms/entry";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class EntryAfterRestoreFromBinEventHandlerImpl
     implements EntryAfterRestoreFromBinEventHandlerAbstraction.Interface
@@ -726,9 +726,9 @@ export default EntryAfterRestoreFromBinEventHandler;
 
 ## Loading Event Handlers in Your Project
 
-All the event handlers MUST be exported as default export from the file, otherwise it will not work.
+All the event handlers MUST be exported as `default export` from the file, otherwise it will not work.
 
-To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, something like this:
+To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, like this:
 
 ```tsx webiny.config.tsx
 import React from "react";
