--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -26,7 +26,7 @@ With the events you can hook into a number of different Group related operations
 
 ```typescript extensions/cms/group/eventHandler/create/beforeCreate.ts
 import { GroupBeforeCreateEventHandler as GroupBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupBeforeCreateEventHandlerImpl
     implements GroupBeforeCreateEventHandlerAbstraction.Interface
@@ -57,7 +57,7 @@ export default GroupBeforeCreateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/create/afterCreate.ts
 import { GroupAfterCreateEventHandler as GroupAfterCreateEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupAfterCreateEventHandlerImpl
     implements GroupAfterCreateEventHandlerAbstraction.Interface
@@ -90,7 +90,7 @@ export default GroupAfterCreateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/update/beforeUpdate.ts
 import { GroupBeforeUpdateEventHandler as GroupBeforeUpdateEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupBeforeUpdateEventHandlerImpl
     implements GroupBeforeUpdateEventHandlerAbstraction.Interface
@@ -121,7 +121,7 @@ export default GroupBeforeUpdateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/update/afterUpdate.ts
 import { GroupAfterUpdateEventHandler as GroupAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupAfterUpdateEventHandlerImpl
     implements GroupAfterUpdateEventHandlerAbstraction.Interface
@@ -154,7 +154,7 @@ export default GroupAfterUpdateEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/delete/beforeDelete.ts
 import { GroupBeforeDeleteEventHandler as GroupBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupBeforeDeleteEventHandlerImpl
     implements GroupBeforeDeleteEventHandlerAbstraction.Interface
@@ -185,7 +185,7 @@ export default GroupBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/group/eventHandler/delete/afterDelete.ts
 import { GroupAfterDeleteEventHandler as GroupAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/group";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class GroupAfterDeleteEventHandlerImpl
     implements GroupAfterDeleteEventHandlerAbstraction.Interface
@@ -214,9 +214,9 @@ export default GroupAfterDeleteEventHandler;
 
 ## Loading Event Handlers in Your Project
 
-All the event handlers MUST be exported as default export from the file, otherwise it will not work.
+All the event handlers MUST be exported as `default export` from the file, otherwise it will not work.
 
-To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, something like this:
+To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, like this:
 
 ```tsx webiny.config.tsx
 import React from "react";
