--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/model.mdx
@@ -26,7 +26,7 @@ With the events you can hook into a number of different Entry related operations
 
 ```typescript extensions/cms/model/eventHandler/create/beforeCreate.ts
 import { ModelBeforeCreateEventHandler as ModelBeforeCreateEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelBeforeCreateEventHandlerImpl
     implements ModelBeforeCreateEventHandlerAbstraction.Interface
@@ -57,7 +57,7 @@ export default ModelBeforeCreateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/create/afterCreate.ts
 import { ModelAfterCreateEventHandler as ModelAfterCreateEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelAfterCreateEventHandlerImpl
     implements ModelAfterCreateEventHandlerAbstraction.Interface
@@ -90,7 +90,7 @@ export default ModelAfterCreateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/update/beforeUpdate.ts
 import { ModelBeforeUpdateEventHandler as ModelBeforeUpdateEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelBeforeUpdateEventHandlerImpl
     implements ModelBeforeUpdateEventHandlerAbstraction.Interface
@@ -121,7 +121,7 @@ export default ModelBeforeUpdateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/update/afterUpdate.ts
 import { ModelAfterUpdateEventHandler as ModelAfterUpdateEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelAfterUpdateEventHandlerImpl
     implements ModelAfterUpdateEventHandlerAbstraction.Interface
@@ -154,7 +154,7 @@ export default ModelAfterUpdateEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/createFrom/beforeCreateFrom.ts
 import { ModelBeforeCreateFromEventHandler as ModelBeforeCreateFromEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelBeforeCreateFromEventHandlerImpl
     implements ModelBeforeCreateFromEventHandlerAbstraction.Interface
@@ -185,7 +185,7 @@ export default ModelBeforeCreateFromEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/createFrom/afterCreateFrom.ts
 import { ModelAfterCreateFromEventHandler as ModelAfterCreateFromEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelAfterCreateFromEventHandlerImpl
     implements ModelAfterCreateFromEventHandlerAbstraction.Interface
@@ -218,7 +218,7 @@ export default ModelAfterCreateFromEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/delete/beforeDelete.ts
 import { ModelBeforeDeleteEventHandler as ModelBeforeDeleteEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelBeforeDeleteEventHandlerImpl
     implements ModelBeforeDeleteEventHandlerAbstraction.Interface
@@ -249,7 +249,7 @@ export default ModelBeforeDeleteEventHandler;
 
 ```typescript extensions/cms/model/eventHandler/delete/afterDelete.ts
 import { ModelAfterDeleteEventHandler as ModelAfterDeleteEventHandlerAbstraction } from "webiny/api/cms/model";
-import { Logger } from "webiny/api/features/Logger";
+import { Logger } from "webiny/api/logger";
 
 class ModelAfterDeleteEventHandlerImpl
     implements ModelAfterDeleteEventHandlerAbstraction.Interface
@@ -278,9 +278,9 @@ export default ModelAfterDeleteEventHandler;
 
 ## Loading Event Handlers in Your Project
 
-All the event handlers MUST be exported as default export from the file, otherwise it will not work.
+All the event handlers MUST be exported as `default export` from the file, otherwise it will not work.
 
-To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, something like this:
+To load the event handlers in your project, you need to add them in the root `webiny.config.tsx` file, like this:
 
 ```tsx webiny.config.tsx
 import React from "react";
