wip: group use cases

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/entry.mdx
@@ -1,5 +1,5 @@
 ---
-id: dhuztl3u
+id: umir0lpv
 title: Entry Event Handlers
 description: Which event handlers are available in Headless CMS Entries and how to use them.
 ---
