--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -1,5 +1,5 @@
 ---
-id: bxdbed4t
+id: zg6eotsv
 title: Group Event Handlers
 description: Which event handlers are available in Headless CMS Groups and how to use them.
 ---
