wip: group use cases

--- a/docs/developer-docs/6.0.x/headless-cms/use-case/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/use-case/group.mdx
@@ -65,15 +65,15 @@ export default MyCustomClassUsingTheUseCase;
 ### Update Group Use Case
 
 ```typescript extensions/cms/group/useCase/updateGroupUseCase.ts
-import { CreateGroupUseCase } from "webiny/api/cms/group";
-import { UpdateGroup } from "./abstraction.js";
+import {CreateGroupUseCase} from "webiny/api/cms/group";
+import {UpdateGroup} from "./abstraction.js";
 
 class MyCustomClassUsingTheUseCaseImpl implements UpdateGroup.Interface {
     public constructor(private useCase: UpdateGroupUseCase.Interface) {}
 
     public async execute(params: UpdateGroup.Params): UpdateGroup.Return {
         /**
-         * User wants to create a new group in their own class
+         * User wants to update a group in their own class
          */
         const newGroup = await this.useCase.execute({
             name: params.name,
@@ -105,7 +105,7 @@ class MyCustomClassUsingTheUseCaseImpl implements DeleteGroup.Interface {
 
     public async execute(params: DeleteGroup.Params): DeleteGroup.Return {
         /**
-         * User wants to create a new group in their own class
+         * User wants to delete a group in their own class
          */
         const newGroup = await this.useCase.execute({
             name: params.name,
