--- a/docs/developer-docs/6.0.x/headless-cms/use-case/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/use-case/model.mdx
@@ -7,7 +7,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- What are available use cases in Headless CMS Models?
+- What are available use cases for Headless CMS Models?
 - How to use them?
 
 </Alert>
@@ -16,7 +16,7 @@ import {Alert} from "@/components/Alert";
 
 In `v6` of Webiny, we moved away from using `context` to `use cases`. Since we employ our own custom Dependency Injection (DI), we can now easily inject anything we need to a class being used.
 
-This article will list all the use cases available in Headless CMS Models and explain how to use them.
+This article will list all the use cases available for Headless CMS Models and explain how to use them.
 
 ## Use Cases
 
