--- a/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
@@ -59,4 +59,37 @@ const MyCustomClassUsingTheUseCase = CreateEntry.createImplementation({
 
 export default MyCustomClassUsingTheUseCase;
 ```
-
+THE LIST:
+UpdateEntryUseCase,
+CreateEntryRevisionFromUseCase,
+DeleteEntryUseCase,
+DeleteEntryRevisionUseCase,
+DeleteMultipleEntriesUseCase,
+MoveEntryUseCase,
+PublishEntryUseCase,
+UpdateSingletonEntryUseCase,
+GetEntryByIdUseCase,
+GetEntryUseCase,
+GetPublishedEntriesByIdsUseCase,
+GetPreviousRevisionByEntryIdUseCase,
+GetLatestRevisionByEntryIdIncludingDeletedUseCase,
+GetLatestEntriesByIdsUseCase,
+ListEntriesUseCase,
+ListDeletedEntriesUseCase,
+ListEntriesRepository,
+ListLatestEntriesUseCase,
+ListPublishedEntriesUseCase,
+GetLatestRevisionByEntryIdUseCase,
+GetEntriesByIdsUseCase,
+GetLatestRevisionByEntryIdBaseUseCase,
+GetPreviousRevisionByEntryIdBaseUseCase,
+GetLatestDeletedRevisionByEntryIdUseCase,
+GetRevisionByIdUseCase,
+GetRevisionsByEntryIdUseCase,
+GetSingletonEntryUseCase,
+GetPublishedRevisionByEntryIdUseCase,
+UnpublishEntryUseCase,
+MoveEntryToBinUseCase,
+RepublishEntryUseCase,
+RestoreEntryFromBinUseCase,
+ValidateEntryUseCase,
