wip: entry use cases

--- a/docs/developer-docs/6.0.x/basic/result.mdx
+++ b/docs/developer-docs/6.0.x/basic/result.mdx
@@ -25,9 +25,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-In Webiny v6 we have moved away returning a plain value directly and throwing exceptions as a result of a method or function.
-
-We are now utilizing the `Result` pattern, and we have a `Result` class that helps us with that.
+We are utilizing the `Result` pattern, and we have a `Result` class that helps us with that.
 
 The `Result` pattern is a way to represent the outcome of an operation that can either succeed or fail.
 Instead of throwing exceptions, functions return a `Result` object that encapsulates either a successful value or an error.
