--- a/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
@@ -104,39 +104,194 @@ const MyCustomClassUsingTheUseCase = UpdateEntry.createImplementation({
 export default MyCustomClassUsingTheUseCase;
 ```
 
+### Create Entry Revision From Use Case
 
+```typescript
+import { CreateEntryRevisionFromUseCase } from "webiny/api/cms/entry";
+```
 
-THE LIST:
-UpdateEntryUseCase,
-CreateEntryRevisionFromUseCase,
-DeleteEntryUseCase,
-DeleteEntryRevisionUseCase,
-DeleteMultipleEntriesUseCase,
-MoveEntryUseCase,
-PublishEntryUseCase,
-UpdateSingletonEntryUseCase,
-GetEntryByIdUseCase,
-GetEntryUseCase,
-GetPublishedEntriesByIdsUseCase,
-GetPreviousRevisionByEntryIdUseCase,
-GetLatestRevisionByEntryIdIncludingDeletedUseCase,
-GetLatestEntriesByIdsUseCase,
-ListEntriesUseCase,
-ListDeletedEntriesUseCase,
-ListEntriesRepository,
-ListLatestEntriesUseCase,
-ListPublishedEntriesUseCase,
-GetLatestRevisionByEntryIdUseCase,
-GetEntriesByIdsUseCase,
-GetLatestRevisionByEntryIdBaseUseCase,
-GetPreviousRevisionByEntryIdBaseUseCase,
-GetLatestDeletedRevisionByEntryIdUseCase,
-GetRevisionByIdUseCase,
-GetRevisionsByEntryIdUseCase,
-GetSingletonEntryUseCase,
-GetPublishedRevisionByEntryIdUseCase,
-UnpublishEntryUseCase,
-MoveEntryToBinUseCase,
-RepublishEntryUseCase,
-RestoreEntryFromBinUseCase,
-ValidateEntryUseCase,
+### Delete Entry Use Case
+
+```typescript
+import { DeleteEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Delete Entry Revision Use Case
+
+```typescript
+import { DeleteEntryRevisionUseCase } from "webiny/api/cms/entry";
+```
+
+### Delete Multiple Entries Use Case
+
+```typescript
+import { DeleteMultipleEntriesUseCase } from "webiny/api/cms/entry";
+```
+
+### Move Entry Use Case
+
+```typescript
+import { MoveEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Publish Entry Use Case
+
+```typescript
+import { PublishEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Update Singleton Entry Use Case
+
+```typescript
+import { UpdateSingletonEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Entry By Id Use Case
+
+```typescript
+import { GetEntryByIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Entry Use Case
+
+```typescript
+import { GetEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Published Entries By Ids Use Case
+
+```typescript
+import { GetPublishedEntriesByIdsUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Previous Revision By Entry Id Use Case
+
+```typescript
+import { GetPreviousRevisionByEntryIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Latest Revision By Entry Id Including Deleted Use Case
+
+```typescript
+import { GetLatestRevisionByEntryIdIncludingDeletedUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Latest Entries By Ids Use Case
+
+```typescript
+import { GetLatestEntriesByIdsUseCase } from "webiny/api/cms/entry";
+```
+
+### List Entries Use Case
+
+```typescript
+import { ListEntriesUseCase } from "webiny/api/cms/entry";
+```
+
+### List Deleted Entries Use Case
+
+```typescript
+import { ListDeletedEntriesUseCase } from "webiny/api/cms/entry";
+```
+
+### List Entries Repository
+
+```typescript
+import { ListEntriesRepository } from "webiny/api/cms/entry";
+```
+
+### List Latest Entries Use Case
+
+```typescript
+import { ListLatestEntriesUseCase } from "webiny/api/cms/entry";
+```
+
+### List Published Entries Use Case
+
+```typescript
+import { ListPublishedEntriesUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Latest Revision By Entry Id Use Case
+
+```typescript
+import { GetLatestRevisionByEntryIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Entries By Ids Use Case
+
+```typescript
+import { GetEntriesByIdsUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Latest Revision By Entry Id Base Use Case
+
+```typescript
+import { GetLatestRevisionByEntryIdBaseUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Previous Revision By Entry Id Base Use Case
+
+```typescript
+import { GetPreviousRevisionByEntryIdBaseUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Latest Deleted Revision By Entry Id Use Case
+
+```typescript
+import { GetLatestDeletedRevisionByEntryIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Revision By Id Use Case
+
+```typescript
+import { GetRevisionByIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Revisions By Entry Id Use Case
+
+```typescript
+import { GetRevisionsByEntryIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Singleton Entry Use Case
+
+```typescript
+import { GetSingletonEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Get Published Revision By Entry Id Use Case
+
+```typescript
+import { GetPublishedRevisionByEntryIdUseCase } from "webiny/api/cms/entry";
+```
+
+### Unpublish Entry Use Case
+
+```typescript
+import { UnpublishEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Move Entry To Bin Use Case
+
+```typescript
+import { MoveEntryToBinUseCase } from "webiny/api/cms/entry";
+```
+
+### Republish Entry Use Case
+
+```typescript
+import { RepublishEntryUseCase } from "webiny/api/cms/entry";
+```
+
+### Restore Entry From Bin Use Case
+
+```typescript
+import { RestoreEntryFromBinUseCase } from "webiny/api/cms/entry";
+```
+
+### Validate Entry Use Case
+
+```typescript
+import { ValidateEntryUseCase } from "webiny/api/cms/entry";
+```
