--- a/docs/developer-docs/6.0.x/basic/result.mdx
+++ b/docs/developer-docs/6.0.x/basic/result.mdx
@@ -25,14 +25,14 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-We are utilizing the `Result` pattern, and we have a `Result` class that helps us with that.
+Webiny is utilizing the `Result` pattern, and there is a `Result` class that helps with that.
 
 The `Result` pattern is a way to represent the outcome of an operation that can either succeed or fail.
 Instead of throwing exceptions, functions return a `Result` object that encapsulates either a successful value or an error.
 
 ## Usage
 
-Let's say we have a function that performs some async call to an operation which we import from our dependency, and it can either return a result or throw an error.
+Let's say you have a function that performs some async call to an operation which you import from a dependency, and it can either return a result or throw an error.
 
 ```typescript
 import {Result} from "webiny/api";
@@ -54,13 +54,13 @@ if(result.isOk()) {
 }
 ```
 
-This way we can be sure that the method does not throw an exception, and we do not have to worry about it down the call stack, which uses the `myMethod` function.
+This way you can be sure that the method does not throw an exception, and you do not have to worry about it down the call stack, which uses the `myMethod` function.
 
 ## Return Types
 
 When using the `Result` pattern the return types are inferred from the values passed to the `Result.ok()` and `Result.fail()` methods.
 
-For example, if we have a function that returns a `Result` object with a successful value of type `string` and an error of type `Error`, the return type would be `Result<string, Error>`.
+For example, if you have a function that returns a `Result` object with a successful value of type `string` and an error of type `Error`, the return type would be `Result<string, Error>`.
 
 ```typescript
 import {Result} from "webiny/api";
@@ -74,7 +74,7 @@ const myMethod = async(): Promise<Result<string, Error>> => {
 }
 ```
 
-For more complex return types, we can define custom types for the success value and error value.
+For more complex return types, you can define custom types for the success value and error value.
 
 ```typescript
 import type { Result } from "webiny/api";
@@ -106,7 +106,7 @@ export interface MyMethod {
 }
 ```
 
-And then we can implement the method like this:
+And then you can implement the method like this:
 
 ```typescript
 const myMethod: MyMethod = async (params) => {
@@ -135,7 +135,7 @@ When using `Webiny` methods and functions that return a `Result` object, you mig
 
 If the type is not available for you to import, you can use the `Result.UnwrapResult` and `Result.UnwrapError` utility to get those types.
 
-For example, using our `GetEntryByIdUseCase` from Headless CMS:
+For example, using the `GetEntryByIdUseCase` from Headless CMS:
 
 ```typescript
 import type { Result } from "webiny/api";
