fix: entry extended

--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/entry-extended.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/entry-extended.mdx
@@ -14,7 +14,7 @@ import {Alert} from "@/components/Alert";
 </Alert>
 
 ## Overview
-In this extended example, we will give an example of a bit more complex event handler for the Entry.
+This extended example demonstrates a more complex event handler for the Entry.
 
 ## Before Entry Creation
 
@@ -38,7 +38,7 @@ class EntryBeforeCreateEventHandlerImpl
     public async handle(event: EntryBeforeCreateEventHandlerAbstraction.Event): Promise<void> {
         const { payload } = event;
         const { entry, input, model } = payload;
-        // we will only do something if the model ID matches "myTargetModelId"
+        // only process entries if the model ID matches "myTargetModelId"
         if (model.modelId !== "myTargetModelId") {
             return;
         }
@@ -46,7 +46,7 @@ class EntryBeforeCreateEventHandlerImpl
         if (!targetValue) {
             return;
         }
-        // let's say we want to have a value from the input to be unique across all entries in this model
+        // let's say you want to make a value from the input unique across all entries in this model
         const result = await this.listEntriesUseCase.execute(model, {
             where: {
                 values: {
@@ -55,12 +55,12 @@ class EntryBeforeCreateEventHandlerImpl
             },
             limit: 1
         });
-        // when an error occurs, we just log it and allow the creation to proceed
+        // when an error occurs, just log it and allow the creation to proceed
         if (result.isFail()) {
             this.logger.error("Error checking for existing entries:", result.error);
             return;
         }
-        // no items with the same value found, we are good to go
+        // no items with the same value found, proceed with creation
         if (result.value.meta.totalCount === 0) {
             return;
         }
