--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -15,9 +15,9 @@ import {Alert} from "@/components/Alert";
 </Alert>
 
 ## Overview
-In our Headless CMS we provide events for our users to hook into.
+Webiny Headless CMS provides events for users to hook into.
 
-With the events you can hook into a number of different Group related operations, all of which we will list here.
+With the events you can hook into a number of different Group related operations, all of which are listed here.
 
 ## Create a Group
 
