fix: entry use case

--- a/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/use-case/entry.mdx
@@ -18,10 +18,10 @@ This article will list all the use cases available for Headless CMS Entries and 
 
 ## Use Cases
 
-All our use cases have an `execute` method that you can call to perform the action that use case is for.
+All use cases have an `execute` method that you can call to perform the action that use case is for.
 Params of that method and its return type are defined in the abstraction of the use case.
 
-Consult our examples for more information.
+Consult the examples below for more information.
 
 ### Create Entry Use Case
 
