--- a/docs/developer-docs/6.0.x/headless-cms/group/builder.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/group/builder.mdx
@@ -9,10 +9,39 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- TBD
+- How to create code groups using the Group Builder?
 
 </Alert>
 
 ## Overview
 
-TBD
+The Group Builder allows you to programmatically create code groups. Groups are used to organize and categorize your models, making it easier to manage and navigate through different types of content in the Admin UI.
+
+By implementing the `ModelGroupFactory` interface, you can define groups with icons, names, and slugs. This is particularly useful when you need to create groups dynamically or as part of a plugin or extension installation process.
+
+## Code Example
+
+```typescript
+import { ModelGroupFactory } from "webiny/api/cms/group";
+
+class MyCustomGroup implements ModelGroupFactory.Interface {
+    public async execute(): ModelGroupFactory.Return {
+        return [
+            {
+                icon: {
+                    name: "myIcon",
+                    type: "icon"
+                },
+                name: "A Group",
+                slug: "my-custom-group"
+            }
+        ];
+    }
+}
+
+export default ModelGroupFactory.createImplementation({
+    implementation: MyCustomGroup,
+    dependencies: []
+});
+```
+
