--- a/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
@@ -9,7 +9,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- How to create content models programmatically using the Model Builder?
+- How to create content models using the Model Builder?
 
 </Alert>
 
