--- a/docs/developer-docs/6.0.x/headless-cms/builder/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/group.mdx
@@ -9,7 +9,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- How to create code groups using the Group Builder?
+- How to create groups using the Group Builder?
 
 </Alert>
 
